# pyoptx

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pyoptx/: __init__.py  _core.pyi
scripts/: benchmark.py  calibration_demo.py
src/: binomial.rs  black_scholes.rs  distributions.rs  error.rs  implied_vol.rs  lib.rs  monte_carlo.rs
tests/: test_pyoptx.py
