[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyoptx"
version = "0.1.0"
description = "Fast options pricing and risk library: Black-Scholes, binomial trees, and Monte Carlo with full Greeks, built on a Rust core with Python bindings."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "dylank99" }]
keywords = ["options", "quantitative-finance", "black-scholes", "monte-carlo", "greeks", "implied-volatility", "rust"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Financial and Insurance Industry",
]

[project.urls]
Homepage = "https://github.com/dylank99/pyoptx"
Repository = "https://github.com/dylank99/pyoptx"

[project.optional-dependencies]
# Tooling for tests, the benchmark script, and the calibration demo.
test = ["pytest>=7.0"]
demo = ["yfinance>=0.2", "numpy>=1.21", "matplotlib>=3.5", "pandas>=1.3"]

[tool.maturin]
# The compiled extension is imported as `pyoptx._core`; the pure-Python wrapper
# package lives in `./pyoptx` and re-exports it with a clean, typed API.
module-name = "pyoptx._core"
python-source = "."
features = ["extension-module"]
